--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.2'
-        classpath "com.meiyou.framework.gradle.plugin:my-deploy:1.0.4"
+        // classpath "com.meiyou.framework.gradle.plugin:my-deploy:1.0.4"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -17,9 +17,6 @@ buildscript {
 
 allprojects {
     repositories {
-        maven{
-            url "http://192.168.10.230:8081/nexus/content/repositories/snapshots"
-        }
         jcenter()
     }
 }
